--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "https://www.notion.so/TIL-0326bb9d8d244c08b7ff7cc7cde959a1",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "dev": "webpack-dev-server --config webpack.config.development.js",
+    "prebuild": "rimraf dist",
+    "build": "cross-env NODE_ENV=production webpack --mode production --config webpack.config.production.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-imported-component": "^6.5.3",
     "react-prop-types": "^0.4.0",
     "react-router-dom": "^6.2.1",
     "semantic-ui-react": "^2.0.4",
@@ -31,8 +33,12 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.2",
+    "postcss-loader": "^6.2.1",
+    "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1",
