--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/dragons6641/react-webpack-boilerplate-hmr#readme",
   "dependencies": {
+    "core-js": "^3.20.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-imported-component": "^6.5.3",
@@ -31,17 +32,23 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.8",
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.2",
+    "node-sass": "^7.0.1",
     "postcss-loader": "^6.2.1",
+    "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2",
+    "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.67.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
