--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,11 @@
         "corejs": { "version": 3, "proposals": true }
       }
     ],
-    "@babel/preset-react"
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ]
 }
