--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-sass": "^7.0.1",
     "postcss-loader": "^6.2.1",
     "raw-loader": "^4.0.2",
+    "react-hot-loader": "^4.13.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
